--- a/templates/base-site.html
+++ b/templates/base-site.html
@@ -12,11 +12,16 @@
 	<link rel="stylesheet" href="{% static 'css/style.css' %}" />
 	<link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
 
-
-	<script src="{% static 'js/jquery.min.js' %}"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js">
+    </script>
+	<!--<script src="{№ static 'js/jquery.min.js' %}"></script>-->
 	<script src="{% static 'js/jquery-ui/jquery-ui.min.js' %}"></script>
 	<link href="{% static 'js/jquery-ui/jquery-ui.theme.min.css' %}" rel="stylesheet">
 	<link href="{% static 'js/jquery-ui/jquery-ui.min.css' %}" rel="stylesheet">
+
+    <script src="{% static 'js/fancybox.js' %}"></script>
+    <link href="{% static 'css/fancybox.css' %}" rel="stylesheet">
+
 </head>
 
 <body>
@@ -111,8 +116,11 @@
         </ul>
         </div>
     </footer>
-	<script src="{% static 'js/bootstrap.min.js' %}"></script>
 
+    <!--<script src="{% static 'js/bootstrap.min.js' %}"></script>
+-->
+
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 </body>
 
 </html>
