--- a/templates/site/search.html
+++ b/templates/site/search.html
@@ -20,7 +20,11 @@
       </p>
   </div>
     {% for obj in search_object %}
-
+    <div class="st-metro">
+        <p><span class="st-p">метро</span>
+        <span class="st-span">{{obj.station_one}}</span>
+        </p>
+    </div>
         <div class="myobj">
             <p>
                 {% for img in imgs %}
