--- a/myclient/static/css/style.css
+++ b/myclient/static/css/style.css
@@ -396,6 +396,17 @@ span.st-span {
     /* float: right; */
     margin: -110px 0 60px 150px;
 }
+.st-metro {
+    padding: 10px;
+    border-top: 1px solid;
+}
+.btn-zay{
+    padding: 20px;
+    margin: 30px 0 0 35%;
+}
+a.zay-btn{
+    padding: 20px;
+}
 /*Футер*/
 footer{
     width: 100%;
