--- a/templates/site/search.html
+++ b/templates/site/search.html
@@ -10,15 +10,45 @@
 {% block content %}
 
 <div class="home-obj">
+    {% if myobjs %}
+    {% for objs in myobjs %}
+    <div class="st-metro">
+        <p><span class="st-p">метро</span>
+        {% with objs.all.0 as metro %}
+            <span class="st-span">{{ metro.station_one }}</span>
+        {% endwith %}</br>
+        </p>
+    </div>
+    <div class="block-metro-s">
+        {% for obj in objs %}
 
-  {% if search_object %}
-  <div class="st-metro">
-      <p><span class="st-p">метро</span>
-      {% with search_object.all.0 as metro %}
-          <span class="st-span">{{ metro.station_one }}</span>
-      {% endwith %}</br>
-      </p>
-  </div>
+
+        <div class="myobj">
+            <p>
+                {% for img in imgs %}
+                <a href="{% url 'obj_single' pk=obj.id %}"><img src="{{MEDIA_URL}}{{ img.image.url }}" width="100%" height="100%" alt="Аренда помещений"></a>
+                {% endfor %}
+            </p>
+            <p>
+                {{obj.price}} Р/месяц </br>
+                {{obj.adres}}</br>
+                {{obj.station_one}} {% if obj.station_two %} {{obj.station_two2}} {% endif %}   </br>
+                150 метров от метро </br></br>
+                <div class="area">
+                    {{obj.area}} м<sup>2</sup>
+                </div>
+            </p>
+        </div>
+
+        {% endfor %}
+        </div>
+        <div class="clearfix">
+
+        </div>
+    {% endfor %}
+
+  {% elif search_object %}
+
     {% for obj in search_object %}
     <div class="st-metro">
         <p><span class="st-p">метро</span>
@@ -48,6 +78,10 @@
   {% else %}
     <h1>По вашему запросу нет результатов</h1>
   {% endif %}
+  <h2>Не нашли подходящего помещения или требуется помощь?</h2>
+  <div class="btn-zay">
+       <a href="{% url 'contact' %}" class="cont-btn zay-btn">ОСТАВИТЬ ЗАЯВКУ</a>
+  </div>
 </div>
 <div class="clearfix">
 
