--- a/templates/site/obj-single.html
+++ b/templates/site/obj-single.html
@@ -18,57 +18,57 @@ $(document).ready(function() {
     <table class="table table-bordered table-hover table-obj">
         <tr>
             <td class="td-op">Локация</td>
-            <td><div class="okrug-singl">
+            <td class="td-zn"><div class="okrug-singl">
                 {% for okrug in obj.okrug.all %}
                     {{okrug.options}},
                 {% endfor %}
                 </div>
-                <div style="width: 10px; height:10px; background-color:    {{obj.station_one.color}};border-radius: 10px;float: left; margin: 5px;">
+                <div class="znak-m" style="width: 15px; height:15px; background-color:    {{obj.station_one.color}};border-radius: 10px;float: left; margin: 2px;">
                 </div>
                     {{obj.station_one}} {% if obj.station_two %}, {{obj.station_two}} {% endif %}
             </td>
         </tr>
         <tr>
-            <td>Тип объекта</td>
-            <td>
+            <td class="td-op">Тип объекта</td>
+            <td class="td-zn">
                 {{obj.get_typeobj_display}}, {{obj.etaj}} этаж
             </td>
         </tr>
         <tr>
-            <td>Коммерческие условия</td>
-            <td>
+            <td class="td-op">Коммерческие условия</td>
+            <td class="td-zn">
                 <strong>{{obj.block_area}} м<sup>2</sup> - {{obj.block_price}} руб - {{obj.block_procent}} %</strong>
             </td>
         </tr>
         <tr>
-            <td>Описание объекта</td>
-            <td>
+            <td class="td-op">Описание объекта</td>
+            <td class="td-zn">
                 {{obj.opis}}
             </td>
         </tr>
         <tr>
-            <td>Назначение</td>
-            <td>
+            <td class="td-op">Назначение</td>
+            <td class="td-zn">
                 {% for naznach in obj.naznach.all %}
                     {{naznach.options}},
                 {% endfor %}
             </td>
         </tr>
         <tr>
-            <td>Характеристики</td>
-            <td>
+            <td class="td-op">Характеристики</td>
+            <td class="td-zn">
                 <strong>{{obj.kvt}} КВТ</strong>
             </td>
         </tr>
         <tr>
-            <td>Вид договора</td>
-            <td>
+            <td class="td-op">Вид договора</td>
+            <td class="td-zn">
                 {{obj.dogovor}}
             </td>
         </tr>
         <tr>
-            <td>Основной трафик</td>
-            <td>
+            <td class="td-op">Основной трафик</td>
+            <td class="td-zn">
 
             </td>
         </tr>
@@ -82,13 +82,11 @@ $(document).ready(function() {
 
     {% for obj in img_objs %}
     <div class="img-obj-opis">
-        {% for img in imgs %}
+        {% with obj.station_one.photo_set.all.0 as img %}
         <div class="img-obj">
-                <img class="img-sop-obj"
-                src="{{MEDIA_URL}}{{ img.image.url }}"  alt="Аренда помещений">
+            <img class="img-sop-obj" src="{{MEDIA_URL}}{{ img.image.url }}" alt="Аренда помещений">
         </div>
-        {% endfor %}
-
+        {% endwith %}
         <strong>
         <a href="{% url 'obj_single' pk=obj.id %}">
             <p class="p-pohoj">
@@ -149,7 +147,7 @@ $(document).ready(function() {
 <script>
 jQuery(document).ready(function($) {
     $('.pr-obj:first').css({'width':'280px', 'height':'180px'});
-    
+
 });
 </script>
 {% endblock %}
