--- a/templates/site/search.html
+++ b/templates/site/search.html
@@ -21,13 +21,11 @@
     </div>
     <div class="block-metro-s">
         {% for obj in objs %}
-
-
         <div class="myobj">
             <p>
-                {% for img in imgs %}
-                <a href="{% url 'obj_single' pk=obj.id %}"><img src="{{MEDIA_URL}}{{ img.image.url }}" width="100%" height="100%" alt="Аренда помещений"></a>
-                {% endfor %}
+                {% with obj.station_one.photo_set.all.0 as img %}
+                    <a href="{% url 'obj_single' pk=obj.id %}"><img class="st-obj-img" src="{{MEDIA_URL}}{{ img.image.url }}" alt="Аренда помещений"></a>
+                {% endwith %}
             </p>
             <p>
                 {{obj.price}} Р/месяц </br>
@@ -39,11 +37,9 @@
                 </div>
             </p>
         </div>
-
         {% endfor %}
         </div>
         <div class="clearfix">
-
         </div>
     {% endfor %}
 
@@ -56,21 +52,17 @@
       </p>
   </div>
     {% for obj in search_object %}
-
         <div class="myobj">
             <p>
-                {% for img in imgs %}
-                <a href="{% url 'obj_single' pk=obj.id %}"><img src="{{MEDIA_URL}}{{ img.image.url }}" width="100%" height="100%" alt="Аренда помещений"></a>
-                {% endfor %}
+                {% with obj.station_one.photo_set.all.0 as img %}
+                    <a href="{% url 'obj_single' pk=obj.id %}"><img class="st-obj-img" src="{{MEDIA_URL}}{{ img.image.url }}" alt="Аренда помещений"></a>
+                {% endwith %}
             </p>
             <p>
                 {{obj.price}} Р/месяц </br>
                 {{obj.adres}}</br>
                 {{obj.station_one}} {% if obj.station_two %} {{obj.station_two2}} {% endif %}   </br>
                 150 метров от метро </br>
-                {# with obj.okrug.all.0 as attachment #}
-                    {{ attachment.options }}
-                {# endwith #}</br>
                 <div class="area">
                     {{obj.area}} м<sup>2</sup>
                 </div>
@@ -80,9 +72,10 @@
   {% else %}
     <h1>По вашему запросу нет результатов</h1>
   {% endif %}
-  <div class="clearfix">
 
+  <div class="clearfix">
   </div>
+
   <h2>Не нашли подходящего помещения или требуется помощь?</h2>
   <div class="btn-zay">
        <a href="{% url 'contact' %}" class="cont-btn zay-btn">ОСТАВИТЬ ЗАЯВКУ</a>
