--- a/templates/site/obj-single.html
+++ b/templates/site/obj-single.html
@@ -18,13 +18,16 @@
     <table class="table table-bordered table-hover table-obj">
         <tr>
             <td class="td-op">Локация</td>
-            <td class="td-zn"><div class="okrug-singl">
-                {% for okrug in obj.okrug.all %}
-                    {{okrug.options}},
-                {% endfor %}
+            <td class="td-zn">
+                <div class="okrug-singl">
+                    {% for okrug in obj.okrug.all %}
+                        {{okrug.options}},
+                    {% endfor %}
                 </div>
-                <div class="znak-m" style="width: 15px; height:15px; background-color:    {{obj.station_one.color}};border-radius: 10px;float: left; margin: 2px;">
+
+                <div class="znak-m" style="width: 15px; height:15px; background-color: {{obj.station_one.color}};border-radius: 10px;float: left; margin: 2px;">
                 </div>
+                
                     {{obj.station_one}} {% if obj.station_two %}, {{obj.station_two}} {% endif %}
             </td>
         </tr>
