--- a/myclient/static/css/style.css
+++ b/myclient/static/css/style.css
@@ -192,6 +192,7 @@ a.a-nav::before{
 }
 form.form_s_3s {
     width: 100%;
+    padding-bottom: 10px;
 }
 .btn-search-obj{
     background-color: #db2c27 !important;
@@ -205,6 +206,9 @@ form.form_s_3s {
     width: 200px;
     float: left;
     margin-left: 35px;
+}
+select#id_naznach {
+    width: 195px;
 }
 .form_s_3s .radio input[type=radio]{
     position: absolute;
@@ -422,6 +426,34 @@ span.st-span {
 }
 a.zay-btn{
     padding: 20px;
+}
+.sort-hide{
+    background-color: #e5e5e5;
+}
+.sort-hide p{
+    font-size: 22px;
+    font-weight: bold;
+    text-transform: uppercase;
+    padding: 0 0 0 55px;
+    line-height: 60px;
+}
+.sort-search{
+    display: none;
+}
+.sort {
+    display: flex;
+    flex-wrap: wrap;
+    margin: 0 0 30px 0;
+}
+.sort-po {
+    margin: 0 15px 0 0;
+    font-size: 17px;
+    text-transform: uppercase;
+}
+.sort-pr {
+    margin: 0 50px 0 20px;
+    font-size: 17px;
+    color: #9c9c9c;
 }
 /*Футер*/
 footer{
